--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="jumbotron text-center">
       <img src="img/yoga.png" alt="Yoga Febian Iriandy" width="200px" class="rounded-circle" />
       <h1 class="display-4 mt-2">Yoga Febian Iriandy</h1>
-      <p class="lead">Full Stack Web Developer</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -220,6 +220,15 @@
       AOS.init({
         once: true,
       });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead', { duration:3, text:'Full Stack Web Developer'});
+      gsap.from('.jumbotron img', { duration: 1, y: -100, opacity: 0, ease:'bounce' });
     </script>
 
     <script>
